# mini-nucleiq-code-challenge

./: .gitignore  README.md  pyproject.toml
src/app/: main.py
src/app/api/: health.py  router.py
src/app/schemas/: health.py
src/mini_nucleiq/: analysis.py  exceptions.py  main.py  models.py  samples_client.py
src/mini_nucleiq/algorithms/: algorithm_base.py  algorithm_factory.py  contiguous_ones.py  even_zeroes.py  surrounded_ones.py
tests/: test_analysis.py  test_models.py  test_samples_client.py
tests/tests_algorithms/: test_algorithm_factory.py  test_contiguous_ones.py  test_even_zeroes.py  test_surrounded_ones.py
