[project]
name = "mini-nucleiq-code-challenge"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1",
]


[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mini_nucleiq"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""


[dependency-groups]
dev = [
    "pyright>=1.1.410",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.15",
]

[project.scripts]
mini-nucleiq = "mini_nucleiq.main:main"


[tool.ruff]
line-length = 120
target-version = "py314"



[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
    "N",
    "ASYNC",
    "S",
]
ignore = [
    "S101",
]

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "strict"
include = ["src", "tests"]
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --cov=mini-nucleiq-code-challenge --cov-report=term-missing"
asyncio_mode = "auto"
